<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <android.support.v7.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnChangeV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_change_label"
                android:onClick="onClickChange"
                app:layout_constraintEnd_toStartOf="@+id/space3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelProfessionV" />

            <Button
                android:id="@+id/btnBackV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_back_label"
                android:onClick="onClickCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/space3"
                app:layout_constraintTop_toBottomOf="@+id/tvProfessionV" />

            <ImageView
                android:id="@+id/img_photo_v"
                android:layout_width="182dp"
                android:layout_height="186dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <Space
                android:id="@+id/space3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfessionV" />

            <TextView
                android:id="@+id/tvLabelWorkerNameV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hint_w_c_name"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_photo_v" />

            <TextView
                android:id="@+id/tvWorkerNameV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvLabelWorkerBirthdayV"
                app:layout_constraintTop_toTopOf="@+id/tvLabelWorkerNameV" />

            <TextView
                android:id="@+id/tvLabelWorkerLastNameV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hint_w_c_last_name"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tvLabelWorkerNameV"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelWorkerNameV" />

            <TextView
                android:id="@+id/tvWorkerLastNameV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvWorkerNameV"
                app:layout_constraintTop_toBottomOf="@+id/tvWorkerNameV" />

            <TextView
                android:id="@+id/tvLabelWorkerBirthdayV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_w_c_birthday"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelWorkerLastNameV" />

            <TextView
                android:id="@+id/tvWorkerBirthdayV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvWorkerLastNameV"
                app:layout_constraintTop_toBottomOf="@+id/tvWorkerLastNameV" />

            <TextView
                android:id="@+id/tvLabelProfessionV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_w_c_profession"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelWorkerBirthdayV" />

            <TextView
                android:id="@+id/tvProfessionV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvWorkerBirthdayV"
                app:layout_constraintTop_toBottomOf="@+id/tvWorkerBirthdayV" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>